--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"type": "cppbuild",
 			"label": "C/C++: g++.exe 生成活动文件",
-			"command": "D:\\MingGw64\\mingw64\\bin\\g++.exe",
+			"command": "C:\\MingGw64\\mingw64\\bin\\g++.exe",
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
@@ -19,7 +19,7 @@
 				"$gcc"
 			],
 			"group": "build",
-			"detail": "编译器: D:\\MingGw64\\mingw64\\bin\\g++.exe"
+			"detail": "编译器: C:\\MingGw64\\mingw64\\bin\\g++.exe"
 		}
 	]
 }
